# tibber_case_study

./: README.md  notebook.ipynb  optimized_charging_schedule.csv  pyproject.toml  run_assignment.ps1
src/: auction_optimization.py  auction_optimization_helpers.py  config.yaml  data_prep.py  demand_load.py  demand_load_helpers.py  limit_price.py  limit_price_helpers.py
src/data/: GUI_ENERGY_PRICES_202212312300-202312312300.csv  GUI_ENERGY_PRICES_202312312300-202412312300.csv  esett_Export-2025-09-20T19_20_33_2023-2024_imb_price.csv  esett_Export-2025-09-20T19_33_12_production.csv  esett_Export-2025-09-20T19_34_52_consumption.csv  ninja_weather_stockholm_2023.csv  ninja_weather_stockholm_2024.csv  optimized_charging_schedule.csv  total_demand.csv  v_max.csv
src/data/models/: ensemble_reg.pkl
tests/: test_auction_optimization_helpers.py  test_data_prep.py  test_demand_load_helpers.py  test_limit_price_helpers.py
